--- a/pagina3.html
+++ b/pagina3.html
@@ -4,8 +4,8 @@
     <title>Página 1</title>
 </head>
 <body>
-    <h1>Página 3</h1>
-    <p><h1 atyle="color:pink Esta é a primeira página.</p>
+    <h1 style="color:green;">Página 3</h1>
+    <p>Este é a primeira página.</p>
     <a href="pagina2.html">Voltar para a Página 2</a><br>
     <a href="index.html">Voltar para a Página 1</a>
 </body>
