--- a/pagina3.html
+++ b/pagina3.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1 style="color:green;">Página 3</h1>
-    <p>Este é a primeira página.</p>
+    <p>Esta é a terceira página.</p>
     <a href="pagina2.html">Voltar para a Página 2</a><br>
     <a href="index.html">Voltar para a Página 1</a>
 </body>
