--- a/pagina2.html
+++ b/pagina2.html
@@ -4,8 +4,8 @@
     <title>Página 2</title>
 </head>
 <body>
-    <h1 style="color:orange;">Página 2</h1>
-    <p>Esta é a segunda página.</p>
+    <h1>Página 2</h1>
+    <h1 style="color:green;">Esta é a segunda página.</p>
     <a href="pagina3.html">Ir para a Página 3</a><br>
     <a href="index.html">Voltar para a Página 1</a>
 </body>
